--- a/notebooks/Getting Started.ipynb
+++ b/notebooks/Getting Started.ipynb
@@ -7,10 +7,12 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
+    "from automatic_climb_detection import logger\n",
     "from automatic_climb_detection.resample_dataframe import resample_dataframe"
    ]
   },
@@ -20,7 +22,7 @@
    "metadata": {},
    "source": [
     "# Loading the data\n",
-    "Read a route from the 15th Tour de France. \n",
+    "Read a route from the Tour de France. \n",
     "\n",
     "It might be easier for us to work with data that is always taken at the same interval.\n",
     "\n",
@@ -34,7 +36,9 @@
    "outputs": [],
    "source": [
     "files = glob.glob(\"../data/TourDeFrance2022/*.csv\")\n",
-    "file = files[0]\n",
+    "files = sorted(files, key=lambda x: int(os.path.basename(x).split(\"-\")[1]))\n",
+    "\n",
+    "file = files[12]\n",
     "df = pd.read_csv(file, index_col=0)\n",
     "df1km = resample_dataframe(df, interpolation_column=\"distance\", interpolation_step=1000)"
    ]
@@ -55,14 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib widget\n",
+    "\n",
     "fig, axs = plt.subplots(1, 2, figsize=(18, 6))\n",
     "plt.suptitle(file)\n",
     "axs[0].plot(df[\"longitude\"], df[\"latitude\"], \"-o\", label=\"High resolution data\")\n",
-    "axs[0].plot(df1km[\"longitude\"], df1km[\"latitude\"], \"-o\", label=\"Low resolution data\")\n",
+    "axs[0].plot(df1km[\"longitude\"], df1km[\"latitude\"], \"-x\", label=\"Low resolution data\")\n",
     "axs[0].set(xlabel=\"Longitude\", ylabel=\"Latitude\")\n",
     "axs[0].legend()\n",
     "axs[1].plot(df[\"distance\"], df[\"altitude\"], \"-o\", label=\"High resolution data\")\n",
-    "axs[1].plot(df1km[\"distance\"], df1km[\"altitude\"], \"-o\", label=\"Low resolution data\")\n",
+    "axs[1].plot(df1km[\"distance\"], df1km[\"altitude\"], \"-x\", label=\"Low resolution data\")\n",
     "axs[1].set(xlabel=\"Distance [m]\", ylabel=\"Altitude [m]\")\n",
     "axs[1].legend()"
    ]
