--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -42,9 +42,9 @@
     "\n",
     "\n",
     "def get_fig_ax(figsize=figsize):\n",
-    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    fig, ax = plt.subplots(figsize=figsize, dpi=300)\n",
     "    clean(ax)\n",
-    "    return fig, ax"
+    "    return fig, ax\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "altitude = [0, 1, 3, 5, 9, 0, 4, 6, 5, 10, 3, 2, 3, 0, 0]\n",
-    "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)"
+    "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([0, 1, 2, 3, 4], [0, 1, 3, 5, 9], lw=lw, color=highlightcolor)"
+    "ax.plot([0, 1, 2, 3, 4], [0, 1, 3, 5, 9], lw=lw, color=highlightcolor)\n"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([11, 12], [2, 3], lw=lw, color=highlightcolor)"
+    "ax.plot([11, 12], [2, 3], lw=lw, color=highlightcolor)\n"
    ]
   },
   {
@@ -121,7 +121,7 @@
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
     "ax.plot([5, 6, 7], [0, 4, 6], lw=lw, color=highlightcolor)\n",
-    "ax.plot([8, 9], [5, 10], lw=lw, color=highlightcolor)"
+    "ax.plot([8, 9], [5, 10], lw=lw, color=highlightcolor)\n"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([5, 6, 7, 8, 9], [0, 4, 6, 5, 10], lw=lw, color=highlightcolor)"
+    "ax.plot([5, 6, 7, 8, 9], [0, 4, 6, 5, 10], lw=lw, color=highlightcolor)\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "x = np.linspace(0, 14, 141)\n",
     "noise = 0.2 * np.random.randn(len(x))\n",
     "ax.plot(x, interpolant(x), lw=lw, color=color)\n",
-    "ax.plot(x, interpolant(x) + noise, lw=lw, color=highlightcolor, alpha=0.7)"
+    "ax.plot(x, interpolant(x) + noise, lw=lw, color=highlightcolor, alpha=0.7)\n"
    ]
   },
   {
