--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -22,9 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "\n",
+    "import folium\n",
+    "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import scipy\n",
+    "from IPython.display import HTML, display  # type: ignore\n",
+    "\n",
+    "from automatic_climb_detection.resample_dataframe import resample_dataframe\n",
     "\n",
     "figsize = (10, 3)\n",
     "lw = 4\n",
@@ -44,7 +52,7 @@
     "def get_fig_ax(figsize=figsize):\n",
     "    fig, ax = plt.subplots(figsize=figsize, dpi=300)\n",
     "    clean(ax)\n",
-    "    return fig, ax\n"
+    "    return fig, ax"
    ]
   },
   {
@@ -63,7 +71,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "altitude = [0, 1, 3, 5, 9, 0, 4, 6, 5, 10, 3, 2, 3, 0, 0]\n",
-    "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n"
+    "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)"
    ]
   },
   {
@@ -82,7 +90,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([0, 1, 2, 3, 4], [0, 1, 3, 5, 9], lw=lw, color=highlightcolor)\n"
+    "ax.plot([0, 1, 2, 3, 4], [0, 1, 3, 5, 9], lw=lw, color=highlightcolor)"
    ]
   },
   {
@@ -101,7 +109,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([11, 12], [2, 3], lw=lw, color=highlightcolor)\n"
+    "ax.plot([11, 12], [2, 3], lw=lw, color=highlightcolor)"
    ]
   },
   {
@@ -121,7 +129,7 @@
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
     "ax.plot([5, 6, 7], [0, 4, 6], lw=lw, color=highlightcolor)\n",
-    "ax.plot([8, 9], [5, 10], lw=lw, color=highlightcolor)\n"
+    "ax.plot([8, 9], [5, 10], lw=lw, color=highlightcolor)"
    ]
   },
   {
@@ -140,7 +148,7 @@
    "source": [
     "fig, ax = get_fig_ax()\n",
     "ax.plot(range(len(altitude)), altitude, lw=lw, color=color)\n",
-    "ax.plot([5, 6, 7, 8, 9], [0, 4, 6, 5, 10], lw=lw, color=highlightcolor)\n"
+    "ax.plot([5, 6, 7, 8, 9], [0, 4, 6, 5, 10], lw=lw, color=highlightcolor)"
    ]
   },
   {
@@ -164,7 +172,7 @@
     "x = np.linspace(0, 14, 141)\n",
     "noise = 0.2 * np.random.randn(len(x))\n",
     "ax.plot(x, interpolant(x), lw=lw, color=color)\n",
-    "ax.plot(x, interpolant(x) + noise, lw=lw, color=highlightcolor, alpha=0.7)\n"
+    "ax.plot(x, interpolant(x) + noise, lw=lw, color=highlightcolor, alpha=0.7)"
    ]
   },
   {
@@ -230,6 +238,49 @@
     "- Create fake elevation profiles.\n",
     "- Python code handles a lot of the IO.\n",
     ":::"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_obj = folium.Map(\n",
+    "    location=(48.856, 2.3522),  # Paris\n",
+    "    zoom_start=5,\n",
+    "    width=\"100%\",\n",
+    "    height=\"100%\",\n",
+    ")\n",
+    "\n",
+    "csv_files = glob.glob(\"../data/TourDeFrance2022/*.csv\")\n",
+    "for csv_file in csv_files:\n",
+    "    df = pd.read_csv(csv_file)\n",
+    "    df = resample_dataframe(\n",
+    "        df, interpolation_column=\"distance\", interpolation_step=1000\n",
+    "    )\n",
+    "    # Convert the latitude and longitude columns to a 'geometry' column\n",
+    "    gdf = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.longitude, df.latitude))\n",
+    "    # Set the coordinate reference system (CRS) for the GeoDataFrame\n",
+    "    gdf.crs = \"EPSG:4326\"\n",
+    "    # Create a list of tuples containing latitude and longitude pairs\n",
+    "    route_coords = list(zip(gdf.latitude, gdf.longitude))\n",
+    "    # Add a polyline with the coordinates of the route\n",
+    "    folium.PolyLine(route_coords, color=\"blue\", weight=5, opacity=0.7).add_to(map_obj)\n",
+    "\n",
+    "\n",
+    "# Set the output cell width to match the map width\n",
+    "display(HTML(\"<style>.output {width: 100% !important;}</style>\"))\n",
+    "# Display the map in Jupyter notebook\n",
+    "map_obj"
    ]
   },
   {
