--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -12,7 +12,7 @@
     "    slide-number: false\n",
     "    theme: [default, custom.scss]\n",
     "fontcolor: darkgrey\n",
-    "logo: WahooOnly_BlackOnWhite_TransBkgd_Logo.png\n",
+    "logo: \"./wahoo_logo_small_black.png\"\n",
     "---"
    ]
   },
