Adding new images.

--- a/slides/slides.ipynb
+++ b/slides/slides.ipynb
@@ -60,6 +60,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Why care about climbs?\n",
+    "\n",
+    "![](/Users/thomascamminady/Repos/cammpweek2023/slides/mceclip1.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why care about climbs?\n",
+    "\n",
+    "![](/Users/thomascamminady/Repos/cammpweek2023/slides/summit.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What's a climb?"
    ]
   },
